--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "ejs": "^2.5.5",
+    "ejs": "^2.5.6",
     "express": "^4.14.1",
-    "mongoose": "^4.8.2"
+    "express-flash-messages": "^0.1.1",
+    "express-flash-notification": "^0.4.0",
+    "express-session": "^1.15.1",
+    "js-alert": "^1.0.4",
+    "mongoose": "^4.8.4",
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   }
 }
